--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -119,13 +119,14 @@
                     <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center"> <strong> <i class="fa fa-envelope"></i>Read all messages    </strong></a></li>
                   </ul>
                 </li>
-                <!-- Languages dropdown    -->
+                <!-- Languages dropdown
                 <li class="nav-item dropdown"><a id="languages" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link language dropdown-toggle"><img src="img/flags/16/GB.png" alt="English"><span class="d-none d-sm-inline-block">English</span></a>
                   <ul aria-labelledby="languages" class="dropdown-menu">
                     <li><a rel="nofollow" href="#" class="dropdown-item"> <img src="img/flags/16/DE.png" alt="English" class="mr-2"><span>German</span></a></li>
                     <li><a rel="nofollow" href="#" class="dropdown-item"> <img src="img/flags/16/FR.png" alt="English" class="mr-2"><span>French                                                         </span></a></li>
                   </ul>
                 </li>
+                -->
                 <!-- Log out-->
                 <li class="nav-item"><a href="login.html" class="nav-link logout"> <span class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i></a></li>
               </ul>
@@ -284,13 +285,23 @@
 		  dataType: 'json',
 		  contentType: 'application/json',
 		  success: function (data) {
-			console.log("Hello world data", data);
+              if (data) {
+    			  $('#dockerRunning').empty();
+                  data.forEach(function(d) {
+        			$('#dockerRunning').append("<tr>"
+                        + "<td>" + d.ID.substr(0,4) + "</td>"
+                        + "<td>" + d.Image + "</td>"
+                        + "<td>" + d.Ports.join(",") + "</td>"
+                        + "</tr>"
+                    );
+                  });
+              }
 		  },
 		  error: function (err) {
 			console.log("ERROR", err);
 		  },
 		});
-	
+
 	</script>
 
 
