--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -166,7 +166,7 @@
             <!-- To Do List-->
             <div class="col-lg-6 col-md-12">
               <div class="card to-do">
-                <h2 class="display h4">Containers</h2>
+                <h2 class="display h4">Running</h2>
 		<p>TODO</p>
 			<table class="table table-dark table-striped">
 			<thead>
@@ -178,9 +178,9 @@
 			</thead>
 			<tbody id="dockerRunning">
 				<tr>
-					<td>123</td>
-					<td>Example</td>
-					<td>57</td>
+					<td></td>
+					<td>Loading</td>
+					<td></td>
 				</tr>
 			</tbody>
 			</table>
@@ -217,7 +217,7 @@
               <!-- Income-->
               <div class="card income text-center">
                 <div class="icon"><i class="icon-line-chart"></i></div>
-                <div class="number">126,418</div><strong class="text-primary">All Income</strong>
+                <div class="number">126,418</div><strong class="text-primary">More Numbers</strong>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
               </div>
             </div>
